<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/pop_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_title"
            android:textSize="34sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/pop_up_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_subtitle_1"
            android:textSize="34sp"/>

        <EditText
            android:id="@+id/pseudo_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pop_up_hint"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/pop_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>