<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"> <!-- nombre de colonnes -->

    <TextView
        android:id="@+id/textViewCol0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.33"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/table_col_one"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCol1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_col_two"
        android:layout_weight="0.6"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCol2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_col_three"
        android:layout_weight="1.077"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>